<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sumuhurtham</string>
    <string name="select_telugu">తెలుగు</string>
    <string name="select_english">English</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="home">Home</string>
    <string name="muhurtham">Muhurtham</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="home_page">

         <![CDATA[
        <html>
            <head>
            <style type=\"text/css\">
            @font-face {font-family: MyFont;src: url(\"file:///android_asset/font/OpenSans-Regular.ttf\")}
            body
            {font-family: MyFont;font-size: medium;text-align: justify;}
            </style>
            </head>
            <body>
            <div style="text-align:center; font-size:13px; color:#bb3536;">
            <strong>(Mantra)- Kala muhuthaah kashthaschahoratrascha sarvashaha/
            	                  <br />
      Arthamasa masa ruthuvasamvastrascha kalpantam// </strong><br />
      </div>

       <br />
      <div style="text-align:justify;">
      Time embodies God, as everyone proposes. Whatever work we plan to start has to be completed without any hurdles and its aim achieved. For this, everyone chooses good / auspicious time. All countries and all religions had have their own concepts of time. Many stories are popular in many countries where ancient civilizations flourished and whre there was an in-depth study of Astronomy. Our country, India had studied and researched deeply and made auspicious time known in the form of and through Astrology. Through this Astrology, we get good results. “When God is realized through time many great qualities are revealed through time”. These revelations are known as good / auspicious through time. A wink of an eye, a dream whole day, whole night, fortnight, a month, a half year and finally a year; these are parts of time.
        <br />
        <br />
      The precise measurement of time has taken into consideration many things like kalpas, Swayambhuva manvantaras, yugas (ages) years ayanamsa (Six-month duration) months, sukla, krishna fortnights, weeks, day &amp; nights and last but not the least it takes into account even a wink of an eye.<br />
      <br />
      <strong>The book Muhurtha Darpanam discusses “Upanayana chapter”. It says…</strong><br />
      <br />
      <div style="text-align:center; color:#bb3536;"><strong>
      (Slo)- Lagnesitah karmani Devapujyo bhavedravi sseetakara  sshubhamse/         <br />
      Hrudistha shastranyapi vardhayanti priyakshanenena yathendriyani//      </strong></div>
      <br />
      The above “sloka” tells us that the wisdom as well as inner most quetiency of the child (Vatuvu) will explore, if we perform Upanayanam in the above mentioned time, the child (Vatuvu) will get extreme delight and well beingness which are similar to the ultimate happiness we get during the occasions like marriages, jatara,utsavams etc.

       <br />
       <br />
      Therefore, let us perform good rituals in auspicious times and deserve to get precious wealth and comforts which are rendered to us by our Vedas and ancient sages.
       <br /> <br />

      </div>

               </body>
	    </html>
		]]>


    </string>
    <string name="contact_page">
         <![CDATA[
        <html>
            <head>
            <style type=\"text/css\">
            @font-face {font-family: MyFont;src: url(\"file:///android_asset/font/OpenSans-Regular.ttf\")}
            body
            {font-family: MyFont;font-size: medium;text-align: justify;}
            </style>
            </head>
            <body>

                    </body>
	    </html>
		]]>
    </string>
    <string name="our_team">Our Team</string>
    <string name="select_lang">Select Language</string>
    <string-array name="menu_item_array">
        <item>About Us</item>
        <item>Why Us</item>
        <item>The Fact is</item>
        <item>Muhurtham</item>
        <item>Get Slokas</item>
        <item>Change Language</item>
        <item>Others</item>
        <item>Quick Contact</item>
    </string-array>
    <string-array name="gallery_thumb_array">
        <item>http://sumuhurtham.in/English/images/Thumbs/muhurtham-june.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/mail-muhurtham.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/muudu-mullu.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/cm.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/1.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/2.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/3.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/4.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/5.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/6.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/7.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/8.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/9.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/10.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/11.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/12.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/13.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/14.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/15.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/16.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/17.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/18.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/19.jpg</item>
        <item>http://sumuhurtham.in/English/images/Thumbs/20.jpg</item>

    </string-array>
    <string-array name="gallery_large_img">

        <item>http://sumuhurtham.in/English/images/Large/june-muhurtham.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/mail-muhurthams.jpg</item>
        <item>http://sumuhurtham.in/images/Sumuhurtham-Advt-Enadu.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/CM%20Sanmanam%202018%20Ugadi.JPG</item>
        <item>http://sumuhurtham.in/English/images/Large/1.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/2.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/3.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/4.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/5.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/6.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/7.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/8.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/9.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/10.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/11.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/12.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/13.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/14.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/15.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/16.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/17.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/18.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/19.jpg</item>
        <item>http://sumuhurtham.in/English/images/Large/20.jpg</item>

    </string-array>
    <string name="about_us_page">

         <![CDATA[
        <html>
            <head>
            <style type=\"text/css\">
            @font-face {font-family: MyFont;src: url(\"file:///android_asset/font/OpenSans-Regular.ttf\")}
            body
            {font-family: MyFont;font-size: medium;text-align: justify;}
            </style>
            </head>
            <body>
            <div style="text-align:center;">
            <div style="color:#4CAF50; font-size:20px; font-weight:bold;"  >About Us</div>
            </div>
            </div>
            </div>
        </body>
	    </html>
		]]>



    </string>
    <string name="about_us">About Us</string>
    <string name="why_us">Why Us</string>
    <string name="why_us_page">

    </string>
    <string name="the_fact_is">The Fact is</string>
    <string name="fact_web_page">

    </string>
    <string name="slokas">Slokas</string>
    <string name="others">Others</string>
    <string name="other_txt_one">Lakshmi Ganapathi Vedic Foundation</string>
    <string name="other_txt_two">Haripriya Marriage Services,Annavaram.</string>
    <string name="other_txt_three">Wedding  Model Card</string>
    <string name="other_txt_four">Gruha pravesham Card Model</string>
    <string name="other_txt_five">Upanayanam Card Model</string>
    <string name="other_txt_six">Annavaram</string>
    <string name="other_txt_seven">Temples</string>
    <string name="other_txt_eight">Shirdi Sai Temple</string>
    <string name="quick">quick</string>
    <string name="your_name">Your Name:</string>
    <string name="email">Email Id:</string>
    <string name="moblie_number">Mobile Number :</string>
    <string name="query">Query:</string>
    <string name="submit_txt">Submit</string>
</resources>