<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_home"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/navigation_home_selector"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_muhurtham"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/navigation_muhurtham__selector"
        android:title="@string/muhurtham"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_gallery"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/navigation_gallery__selector"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contact"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/navigation_contact__selector"
        android:title="@string/contact"
        app:showAsAction="ifRoom" />




</menu>