<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menu_activities.Quick_Contact_Activity">


    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@drawable/ic_arrow_back"
            android:padding="@dimen/_5sdp" />

        <TextView
            android:id="@+id/txt_web_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:fontFamily="@font/ramabhadra"
            android:layout_toRightOf="@+id/back_button"
            android:text="@string/quick"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_banner"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/contact_banner"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_margin="@dimen/_10sdp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:text="@string/your_name"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/edit_name"
            android:background="@drawable/edit_background"
            android:layout_below="@id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint=""
            android:padding="@dimen/_10sdp"
            android:inputType="text"

            />

        <TextView
            android:id="@+id/txt_email_id"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_below="@id/edit_name"
            android:textColor="#000"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/edit_email_id"
            android:background="@drawable/edit_background"
            android:layout_below="@id/txt_email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint=""
            android:padding="@dimen/_10sdp"
            android:inputType="textEmailAddress"

            />
        <TextView
            android:id="@+id/txt_mobile_number"
            android:layout_width="wrap_content"
            android:text="@string/moblie_number"
            android:textSize="20sp"
            android:layout_below="@id/edit_email_id"
            android:textColor="#000"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/edit_mobile_number"
            android:background="@drawable/edit_background"
            android:layout_below="@id/txt_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint=""
            android:padding="@dimen/_10sdp"
            android:inputType="phone"

            />


        <TextView
            android:id="@+id/txt_query"
            android:layout_width="wrap_content"
            android:text="@string/query"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_below="@id/edit_mobile_number"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/edit_query"
            android:background="@drawable/edit_background"
            android:layout_below="@id/txt_query"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="@dimen/_10sdp"
            android:hint=""

            />



        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_submit"
            android:layout_below="@id/edit_query"
            android:layout_width="wrap_content"
            android:background="@drawable/btn_background"
            android:layout_centerInParent="true"
            android:text="@string/submit_txt"
            android:textColor="#FFF"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>